# rig-budget-guard

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
memory/: JOURNAL.md
src/: lib.rs
