[package]
name = "rig-budget-guard"
version = "0.1.0"
edition = "2021"
description = "Token budget enforcement middleware for Rig-based LLM applications. Wraps Rig agents with conservation-checker for budget tracking, phase detection, and per-model limits."
keywords = ["rig", "budget", "tokens", "rate-limit", "conservation"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"
repository = "https://github.com/SuperInstance/rig-budget-guard"
license = "MIT"

[dependencies]
rig-core = "0.38"
conservation-checker = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rig-core = { version = "0.38", features = ["test-utils"] }
